--- a/secapp/templates/partials/_navbar.html
+++ b/secapp/templates/partials/_navbar.html
@@ -14,11 +14,32 @@
     </form>
     <div class="navbar-nav align-items-center ms-auto">
         <div class="nav-item dropdown">
-            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
-                <i class="fa fa-envelope me-lg-2"></i>
-                <span class="d-none d-lg-inline-flex"></span>
-            </a>
+            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="far fa-user me-2"></i></a>
+            <div class="dropdown-menu bg-dark border border-light rounded-3">                
+                <a href="/admin/" class="dropdown-item text-white">Sign In</a>
+                <a href="/admin/" class="dropdown-item text-white">Sign Up</a>
+                <a href="/admin/" class="dropdown-item text-white">404 Error</a>
+                <a href="/admin/" class="dropdown-item text-white">Blank Page</a>
+            </div>
         </div>
+        <a href="/eventlog" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i></a>
+        <a href="/iplogs" class="nav-item nav-link"><i class="fa fa-table me-2"></i></a>
+        <a href="/settings" class="nav-item nav-link"><i class="fa fa-th me-2"></i></a>
+        <!-- <a href="#" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>File Watchdog</a> -->
+        <!-- <a href="#" class="nav-item nav-link"><i class="fa fa-envelope me-2"></i>Virus Total</a> -->
+        <!-- <a href="#" class="nav-item nav-link"><i class="fa fa-bell me-2"></i>About DarkPan</a> -->
+        <!-- <a href="/databreach" class="nav-item nav-link"><i class="fa fa-envelope me-2"></i>Data Breach</a> -->
+        <!-- 
+        <div class="nav-item dropdown">
+            <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i
+                    class="far fa-file-alt me-2"></i></a>
+            <div class="dropdown-menu bg-transparent border-0">
+                <a href="/admin/" class="dropdown-item">Sign In</a>
+                <a href="/admin/" class="dropdown-item">Sign Up</a>
+                <a href="404.html" class="dropdown-item">404 Error</a>
+                <a href="blank.html" class="dropdown-item">Blank Page</a>
+            </div>
+        </div> -->
     </div>
 </nav>
 <!-- Navbar End -->
