--- a/secapp/templates/partials/_sidebar.html
+++ b/secapp/templates/partials/_sidebar.html
@@ -30,6 +30,7 @@
             <a href="/eventlog" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Event Logs</a>
             <a href="/iplogs" class="nav-item nav-link"><i class="fa fa-table me-2"></i>IP Logs</a>
             <a href="/settings" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Settings</a>
+            <a href="/todo" class="nav-item nav-link"><i class="fa fa-list me-2"></i>To Do </a>
             <!-- <a href="#" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>File Watchdog</a> -->
             <!-- <a href="#" class="nav-item nav-link"><i class="fa fa-envelope me-2"></i>Virus Total</a> -->
             <!-- <a href="#" class="nav-item nav-link"><i class="fa fa-bell me-2"></i>About DarkPan</a> -->
