--- a/secapp/templates/settings.html
+++ b/secapp/templates/settings.html
@@ -18,6 +18,15 @@ Settings
         </div>
     </div>
 
+    <div class="card m-2">
+        <div class="card-header">
+            IP Network Controller 
+        </div>
+        <div class="card-body">
+            <h1>ssss</h1>
+        </div>
+    </div>
+
 
     <!-- <div class="col m-2 p-2">
         <button type="button" class="btn btn-danger" onclick="toggleButton(this)">
