--- a/secapp/templates/iplogs.html
+++ b/secapp/templates/iplogs.html
@@ -7,11 +7,30 @@ IP Logs
 {% block content %}
 
 <!-- Chart Start -->
+<style>
+    .blinking-dot {
+        background-color: red;
+        display: inline-block;
+        animation: blink 1s linear infinite;
+        width: 1%;  /* Noktanın genişliğini ayarlar */
+        height: 1%; /* Noktanın yüksekliğini ayarlar */
+    }
+
+    @keyframes blink {
+        0% { opacity: 0; }
+        50% { opacity: 1; }
+        100% { opacity: 0; }
+    }
+</style>
+
+
+
 <div class="container-fluid pt-4 px-4">
     <div class="row g-4">
         <!-- Logs Start -->
         <div class="container-fluid">
             <h1 class="my-4">IP Logs</h1>
+            <!-- <span class="rounded-circle p-1 blinking-dot"></span> -->
             <table class="table table-dark table-striped">
                 <thead>
                     <tr>
@@ -29,7 +48,12 @@ IP Logs
                         <td>{{ iplog.PID }}</td>
                         <td>{{ iplog.Process }}</td>
                         <td>{{ iplog.Local }}</td>
-                        <td>{{ iplog.Remote }}</td>
+                        <td>
+                            {{ iplog.Remote }}
+                            {% if iplog.Type == "Public" %}
+                            <span class="rounded-circle p-1 blinking-dot"></span>
+                            {% endif %}
+                        </td>
                     </tr>
                     {% endfor %}
                 </tbody>
