--- a/secapp/templates/eventlog.html
+++ b/secapp/templates/eventlog.html
@@ -11,7 +11,7 @@ Event Logs
     <div class="row g-4">
         <!-- Event Logs Start -->
         <div class="container-fluid">
-            <h1 class="my-4">Event Logs</h1>
+            <h1 class="">Event Logs</h1>
             <table class="table table-dark table-striped">
                 <thead>
                     <tr>
