--- a/secapp/templates/index.html
+++ b/secapp/templates/index.html
@@ -11,7 +11,7 @@ Homepage
     <div class="row g-4">
         <!-- Event Logs Start -->
         <div class="container-fluid">
-            <h1 class="my-4">Event Logs</h1>
+            <h1>Event Logs</h1>
             <div class="row">
                 {% for event in event_logs %}
                 <div class="col-md-4">
