--- a/secapp/templates/partials/_ipcontroller.html
+++ b/secapp/templates/partials/_ipcontroller.html
@@ -5,6 +5,7 @@
 <button type="button" class="btn btn-primary" id="stop-script-button" data-bs-toggle="button" autocomplete="off">
     Stop Script <span id="stop-icon"></span>
 </button>
+<button type="button" class="btn btn-primary" onclick="location.href='{% url 'run_sql' %}';">Delete IPLogs SQL Table!</button>
 
 <input type="text" id="script-status" class="form-control p-1 mt-2" readonly>
 
