--- a/secapp/templates/settings.html
+++ b/secapp/templates/settings.html
@@ -8,19 +8,29 @@ Settings
 
 <!-- Chart Start -->
 <div class="container-fluid pt-4 px-4">
-    
+
     <div class="card m-2">
         <div class="card-header">
-            IP Network Controller 
+            IP Network Controller
+            <p>IPLogs Table Data: {{ count }}</p>
         </div>
         <div class="card-body">
             {% include 'partials/_ipcontroller.html' %}
         </div>
     </div>
 
-    <div class="card m-2">
+    <div class="card m-2 mt-4">
         <div class="card-header">
-            IP Network Controller 
+            Event Logs Controller
+        </div>
+        <div class="card-body">
+            <h1>ssss</h1>
+        </div>
+    </div>
+
+    <div class="card m-2 mt-4">
+        <div class="card-header">
+            File Watchdog Controller
         </div>
         <div class="card-body">
             <h1>ssss</h1>
