--- a/secapp/templates/eventlog.html
+++ b/secapp/templates/eventlog.html
@@ -6,6 +6,53 @@ Event Logs
 
 {% block content %}
 
+<!-- Bootstrap Button -->
+<button type="button" class="btn btn-primary" id="run-log-collector-btn" data-bs-toggle="button" autocomplete="off">
+    Log Collector'ı Çalıştır <span id="run-log-collector-icon"></span>
+</button>
+
+<button type="button" class="btn btn-primary" id="stop-log-collector-btn" data-bs-toggle="button" autocomplete="off">
+    Log Collector'ı Durdur <span id="stop-log-collector-icon"></span>
+</button>
+
+<input type="text" id="log-collector-status" class="form-control p-1 mt-2" value="Status here" readonly>
+<script>
+    var runButton = document.getElementById('run-log-collector-btn');
+    var stopButton = document.getElementById('stop-log-collector-btn');
+
+    runButton.addEventListener('click', function () {
+        this.classList.add('loading');
+        stopButton.disabled = true;
+        document.getElementById('run-log-collector-icon').textContent = ''; // Clear the icon
+        fetch('/run-log-collector/')
+            .then(response => response.json())
+            .then(data => {
+                console.log(data);
+                document.getElementById('log-collector-status').value = data.status;
+                this.classList.remove('loading');
+                document.getElementById('run-log-collector-icon').textContent = '✔'; // Add a checkmark to the icon
+                stopButton.disabled = false;
+                document.getElementById('stop-log-collector-icon').textContent = ''; // Remove the checkmark from the stop script button when run script button is pressed
+            });
+    });
+
+    stopButton.addEventListener('click', function () {
+        this.classList.add('loading');
+        runButton.disabled = true;
+        document.getElementById('stop-log-collector-icon').textContent = ''; // Clear the icon
+        fetch('/stop-log-collector/')
+            .then(response => response.json())
+            .then(data => {
+                console.log(data);
+                document.getElementById('log-collector-status').value = data.status;
+                this.classList.remove('loading');
+                document.getElementById('stop-log-collector-icon').textContent = '✔'; // Add a checkmark to the icon
+                runButton.disabled = false;
+                document.getElementById('run-log-collector-icon').textContent = ''; // Remove the checkmark from the run script button when stop script button is pressed
+            });
+    });
+</script>
+
 <!-- Chart Start -->
 <div class="container-fluid pt-4 px-4">
     <div class="row g-4">
@@ -32,7 +79,16 @@ Event Logs
                         <td>{{ event.Level }}</td>
                         <td>{{ event.Channel }}</td>
                         <!-- <td>{{ event.Message }}</td> -->
-                        <td>{{ event.PredictedValue }}</td>
+                        <td>
+                            {{ event.PredictedValue }}
+                            {% if event.PredictedValue == 0 %}
+                                <span class="badge bg-success">Safe</span>
+                            {% elif event.PredictedValue >= 1 and event.PredictedValue <= 3 %}
+                                <span class="badge bg-warning">Warning</span>
+                            {% elif event.PredictedValue >= 4 and event.PredictedValue <= 5 %}
+                                <span class="badge bg-danger">Danger</span>
+                            {% endif %}
+                        </td>
                         <td>{{ event.TimeGenerated }}</td>
                     </tr>
                     {% empty %}
