--- a/secapp/templates/iplogs.html
+++ b/secapp/templates/iplogs.html
@@ -22,6 +22,9 @@ IP Logs
     }
 </style>
 
+{% include 'partials/_ipcontroller.html' %}
+
+
 <div class="container-fluid pt-4 px-4">
     <div class="row g-4">
         <!-- Logs Start -->
