--- a/secapp/templates/settings.html
+++ b/secapp/templates/settings.html
@@ -10,6 +10,11 @@ Settings
 <div class="container-fluid pt-4 px-4">
 
     <div class="card m-2">
+        <button class="btn btn-primary" onclick="location.href='{% url 'clear_error_logs' %}'">Clear Error Logs</button>
+        <p>Error log count: {{ count }}</p>
+    </div>
+
+    <div class="card m-2">
         <div class="card-header">
             IP Network Controller
             <p>IPLogs Table Data: {{ count }}</p>
