--- a/secapp/templates/iplogs.html
+++ b/secapp/templates/iplogs.html
@@ -6,24 +6,7 @@ IP Logs
 
 {% block content %}
 
-<!-- Chart Start -->
-<style>
-    .blinking-dot {
-        background-color: red;
-        display: inline-block;
-        animation: blink 1s linear infinite;
-        width: 1%;  /* Noktanın genişliğini ayarlar */
-        height: 1%; /* Noktanın yüksekliğini ayarlar */
-    }
-    @keyframes blink {
-        0% { opacity: 0; }
-        50% { opacity: 1; }
-        100% { opacity: 0; }
-    }
-</style>
-
 {% include 'partials/_ipcontroller.html' %}
-
 
 <div class="container-fluid pt-4 px-4">
     <div class="row g-4">
@@ -66,6 +49,22 @@ IP Logs
         <!-- Logs End -->
     </div>
 </div>
-<!-- Chart End -->
+
+<!-- Specially CSS Start -->
+<style>
+    .blinking-dot {
+        background-color: red;
+        display: inline-block;
+        animation: blink 1s linear infinite;
+        width: 1%;  /* Noktanın genişliğini ayarlar */
+        height: 1%; /* Noktanın yüksekliğini ayarlar */
+    }
+    @keyframes blink {
+        0% { opacity: 0; }
+        50% { opacity: 1; }
+        100% { opacity: 0; }
+    }
+</style>
+<!-- Specially CSS End -->
 
 {% endblock %}
