--- a/secapp/templates/partials/_ipcontroller.html
+++ b/secapp/templates/partials/_ipcontroller.html
@@ -1,14 +1,23 @@
-<!-- IPController.py control form -->
-<button type="button" class="btn btn-primary" id="run-script-button" data-bs-toggle="button" autocomplete="off">
-    Run Script <span id="run-icon"></span>
-</button>
-<button type="button" class="btn btn-primary" id="stop-script-button" data-bs-toggle="button" autocomplete="off">
-    Stop Script <span id="stop-icon"></span>
-</button>
-<button type="button" class="btn btn-primary" onclick="location.href='{% url 'run_sql' %}';">Delete IPLogs SQL Table!
-</button>
+<div class="card m-2">
+    <div class="card-header">
+        IP Network Controller
+    </div>
+    <div class="card-body">
+        <!-- IPController.py control form -->
+        <button type="button" class="btn btn-primary" id="run-script-button" data-bs-toggle="button" autocomplete="off">
+            Run Script <span id="run-icon"></span>
+        </button>
+        <button type="button" class="btn btn-primary" id="stop-script-button" data-bs-toggle="button"
+            autocomplete="off">
+            Stop Script <span id="stop-icon"></span>
+        </button>
+        <button type="button" class="btn btn-primary" onclick="location.href='{% url 'run_sql' %}';">Delete IPLogs SQL
+            Table!
+        </button>
 
-<input type="text" id="script-status" class="form-control p-1 mt-2" value="Status here" readonly>
+        <input type="text" id="script-status" class="form-control p-1 mt-2" value="Status here" readonly>
+    </div>
+</div>
 
 <script>
     document.getElementById('run-script-button').addEventListener('click', function () {
