--- a/secapp/templates/partials/_navbar.html
+++ b/secapp/templates/partials/_navbar.html
@@ -44,12 +44,12 @@
 </nav>
 <!-- Navbar End -->
 <script>
-    document.addEventListener("DOMContentLoaded", function () {
-        document.querySelector('#sidebar-toggler').addEventListener('click', function (event) {
-            event.preventDefault();
-            document.querySelector('#mySidebar').classList.toggle('active');
-        });
-    });
+    // document.addEventListener("DOMContentLoaded", function () {
+    //     document.querySelector('#sidebar-toggler').addEventListener('click', function (event) {
+    //         event.preventDefault();
+    //         document.querySelector('#mySidebar').classList.toggle('active');
+    //     });
+    // });
 </script>
 <!-- <style>
     #mySidebar {
