--- a/secapp/templates/partials/_sidebar.html
+++ b/secapp/templates/partials/_sidebar.html
@@ -1,5 +1,3 @@
-<!-- Sidebar Start -->
-
 <div class="sidebar pe-4 pb-3" id="mySidebar">
     <nav class="navbar bg-secondary navbar-dark">
         <a href="/" class="navbar-brand mx-4 mb-3">
@@ -29,7 +27,9 @@
             </div> -->
             <a href="/eventlog" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Event Logs</a>
             <a href="/iplogs" class="nav-item nav-link"><i class="fa fa-table me-2"></i>IP Logs</a>
+            <a href="/filewatch" class="nav-item nav-link"><i class="fa fa-file me-2"></i>File Watcher</a>
             <a href="/settings" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Settings</a>
+            <a href="/news" class="nav-item nav-link"><i class="fa fa-link me-2"></i>Security News</a>
             <a href="/todo" class="nav-item nav-link"><i class="fa fa-list me-2"></i>To Do </a>
             <!-- <a href="#" class="nav-item nav-link"><i class="fa fa-chart-bar me-2"></i>File Watchdog</a> -->
             <!-- <a href="#" class="nav-item nav-link"><i class="fa fa-envelope me-2"></i>Virus Total</a> -->
@@ -50,10 +50,10 @@
 <!-- Sidebar End -->
 
 <script>
-    document.addEventListener("DOMContentLoaded", function () {
-        document.querySelector('.sidebar-toggler').addEventListener('click', function (event) {
-            event.preventDefault();
-            document.querySelector('#mySidebar').classList.toggle('active');
-        });
-    });
+    // document.addEventListener("DOMContentLoaded", function () {
+    //     document.querySelector('.sidebar-toggler').addEventListener('click', function (event) {
+    //         event.preventDefault();
+    //         document.querySelector('#mySidebar').classList.toggle('active');
+    //     });
+    // });
 </script>
