--- a/secapp/templates/partials/_errorlogs.html
+++ b/secapp/templates/partials/_errorlogs.html
@@ -1,6 +1,13 @@
 <div class="card m-2">
     <div class="card-header">
         <button class="btn btn-primary" onclick="location.href='{% url 'clear_error_logs' %}'">Clear Error Logs</button>
+        <button type="button" class="btn btn-primary" onclick="location.href='{% url 'run_sql' %}';">
+            Clear IPLogs SQL Table!
+        </button>   
+        <button type="button" class="btn btn-primary" id="clear-event-logs-btn" data-bs-toggle="button"
+            autocomplete="off">
+            Clear Event Logs <span id="clear-event-logs-icon"></span>
+        </button>
         <div class="mt-2 mb-2">
             <div class="row">
                 <div class="col-md-12">
