--- a/secapp/templates/partials/_filewatch.html
+++ b/secapp/templates/partials/_filewatch.html
@@ -12,8 +12,84 @@
             <div class="form-group mb-2 mt-2">
                 <label for="newPath">New Path</label>
                 <input type="text" class="form-control bg-white" id="newPath" name="new_path">
+                <small>Example Path:  C:\Users\msy\Project</small>
             </div>
             <button type="submit" class="btn btn-primary">Update Path</button>
+            <button type="button" class="btn btn-primary watch-button">Start Watching</button>
+            <button type="button" class="btn btn-primary watch-button">Stop Watching</button>
+            <button type="button" class="btn btn-primary" id="clearLogsButton">Clear Logs</button>
         </form>
     </div>
 </div>
+
+<script>
+    let isWatching = false;
+
+    function getCookie(name) {
+        let cookieValue = null;
+        if (document.cookie && document.cookie !== '') {
+            const cookies = document.cookie.split(';');
+            for (let i = 0; i < cookies.length; i++) {
+                const cookie = cookies[i].trim();
+                if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                    break;
+                }
+            }
+        }
+        return cookieValue;
+    }
+
+    const watchButtons = document.querySelectorAll('.watch-button');
+    watchButtons.forEach(button => {
+        button.addEventListener('click', function () {
+            const url = isWatching ? '/stop_watch' : '/start_watch';
+            const csrftoken = getCookie('csrftoken');
+            fetch(url, {
+                method: 'POST',
+                headers: {
+                    'X-CSRFToken': csrftoken
+                }
+            })
+                .then(response => response.json())
+                .then(data => {
+                    alert(data.message);
+                    isWatching = !isWatching;
+                    button.innerText = isWatching ? 'Stop Watching' : 'Start Watching';
+                });
+        });
+    });
+
+    document.querySelector('.btn-primary[type="submit"]').addEventListener('click', function (event) {
+        const newPath = document.getElementById('newPath').value;
+        if (!newPath) {
+            event.preventDefault();
+            alert('New Path cannot be empty.');
+        }
+    });
+
+    // Clear Logs
+    document.getElementById('clearLogsButton').addEventListener('click', function () {
+        const url = '/clear_logs';
+        const csrftoken = getCookie('csrftoken');
+        fetch(url, {
+            method: 'POST',
+            headers: {
+                'X-CSRFToken': csrftoken
+            }
+        })
+            .then(response => response.json())
+            .then(data => {
+                alert(data.message);
+                clearTable('fileLogsTable');
+                location.reload();  // Sayfayı yeniden yükle
+            });
+    });
+    
+    function clearTable(tableId) {
+        const table = document.getElementById(tableId);
+        while (table.rows.length > 1) {  // Keep the first row (header)
+            table.deleteRow(1);
+        }
+    }
+</script>
